--- a/src/main/R/badWeather/badWeatherDemo.Rmd
+++ b/src/main/R/badWeather/badWeatherDemo.Rmd
@@ -137,3 +137,32 @@ plt_line = ggplot(mob_joined_with_weather)+
 
 ggplotly(plt_line)
 ```
+
+
+```{r precipitation histogram}
+plt_hist_precip = ggplot(mob_joined_with_weather,aes(x = precip_week,y = not_at_home_change))+
+  stat_summary_bin(fun.y = "mean",
+                   geom = "bar",
+                   binwidth = 2,fill = "blue")
+
+ggplotly(plt_hist_precip)
+```
+
+
+```{r visibility histogram}
+plt_hist_visibility = ggplot(mob_joined_with_weather,aes(x = visibility_mean,y = not_at_home_change))+
+  stat_summary_bin(fun.y = "mean",
+                   geom = "bar",
+                   binwidth = 0.5,fill = "blue")
+
+ggplotly(plt_hist_visibility)
+```
+
+```{r totalsnow histogram}
+plt_hist_visibility = ggplot(mob_joined_with_weather,aes(x = totalsnow_weekly,y = not_at_home_change))+
+  stat_summary_bin(fun.y = "mean",
+                   geom = "bar",
+                   binwidth = 7,fill = "blue")
+
+ggplotly(plt_hist_visibility)
+```
